Update purvi-proekt-s-JavaFX.md